# thora

./: .gitignore  README.md  index.html  pyproject.toml  tquery_playground.html
docs/: tquery_guide.md
r-spike/: README.md  run_spike.R  within_days.R
r/tquery/: DESCRIPTION  LICENSE  NAMESPACE
r/tquery/R/: api.R  ast.R  ast_json.R  codes.R  evaluator.R  parser.R  temporal.R  zzz.R
r/tquery/inst/extdata/: dataset.csv  queries.jsonl
r/tquery/tests/: testthat.R
r/tquery/tests/testthat/: test-evaluator-parity.R  test-parser-parity.R
spec/: README.md  ast.md  grammar.md  semantics.md
spec/golden/: queries.jsonl
tests/: _synthetic.py  conftest.py  explore_cross_validation.py  test_any_quantifier.py  test_codes.py  test_combine.py  test_config_backend.py  test_cross_validation.py  test_evaluator.py  test_incidence.py  test_mask.py  test_multi_query.py  test_parser.py  test_per_ref_aggregates.py  test_performance.py  test_prefix.py  test_string_evaluator.py  test_stringify.py  test_stringops.py  test_temporal.py  test_window_semantics.py  test_zero_counts.py
tools/: bench_generate.py  bench_python.py  bench_r.R  fuzz_parity.py  generate_goldens.py  test_duckdb_parity.py  test_polars_parity.py
tquery/: __init__.py  _ast.py  _ast_json.py  _cache.py  _codebook.py  _codes.py  _evaluator.py  _evaluator_duckdb.py  _evaluator_polars.py  _incidence.py  _parser.py  _prefix.py  _smart_combine.py  _string_evaluator.py  _stringify.py  _stringops.py  _temporal.py  _testdata.py  _types.py
tquery/codebooks/: atc_groups.csv  icd10_chapters.csv
