[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tquery"
version = "0.1.0"
description = "Temporal query language for event-level health data in pandas"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
]
incidence = [
    "scipy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
